--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "@material-ui/core": "^3.1.1",
+    "express": "^4.16.3",
     "fractional": "^1.0.0",
     "next": "^7.0.0",
     "react": "^16.5.2",
@@ -13,9 +14,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
