--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "@material-ui/core": "^3.1.1",
+    "@zeit/next-css": "^1.0.1",
     "express": "^4.16.3",
     "fractional": "^1.0.0",
     "next": "^7.0.0",
