--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "dateformat": "^3.0.3",
     "react": "^16.5.2",
+    "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
