--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -9,6 +9,7 @@
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dom": "^16.5.2",
+    "react-onclickoutside": "^6.7.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "recharts": "^1.3.1"
