--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.0.1",
+    "debug": "^4.1.1",
     "express": "^4.16.4"
   }
 }
