--- a/dashboard/app/package.json
+++ b/dashboard/app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "dateformat": "^3.0.3",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
@@ -12,7 +13,7 @@
     "react-onclickoutside": "^6.7.1",
     "react-responsive": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3",
+    "react-scripts": "^2.1.8",
     "recharts": "^1.3.1"
   },
   "scripts": {
@@ -29,5 +30,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5001"
 }
