--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
