--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "request": "^2.88.0",
     "xlsx": "^0.14.1",
     "xlsx-style": "^0.8.13"
   },
