--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
+    "mongodb-stitch-browser-sdk": "^4.3.2",
     "mongoose": "^5.4.19",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
