--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^1.1.4",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "mongodb-stitch-browser-sdk": "^4.3.2",
