--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "express-fileupload": "^1.1.4",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
+    "moment": "^2.24.0",
     "mongodb-stitch-browser-sdk": "^4.3.2",
     "mongoose": "^5.4.19",
     "nodemailer": "^5.1.1",
