--- a/app/package.json
+++ b/app/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "easy-soap-request": "^2.6.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
