--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,8 @@
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "xlsx": "^0.14.1",
-    "xlsx-style": "^0.8.13"
+    "xlsx-style": "^0.8.13",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
