--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "mongodb-stitch-browser-sdk": "^4.3.2",
     "mongoose": "^5.4.19",
+    "node-persist": "^3.0.4",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
