--- a/app/now.json
+++ b/app/now.json
@@ -1,4 +1,5 @@
 {
     "name": "We Carry app",
-    "version": 2.0
+    "version": 2.0,
+    "builds": [{ "src": "index.js", "use": "@now/node" }]
 }
